--- a/DoneTool/wwwroot/css/taskLayout.css
+++ b/DoneTool/wwwroot/css/taskLayout.css
@@ -495,6 +495,7 @@ select.form-control {
     z-index: 1000;
     max-height: 250px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .guard-dropdown-menu.show {
@@ -519,31 +520,6 @@ select.form-control {
     border-bottom: 1px solid #ddd;
 }
 
-.send-cr-button-wrapper {
-    width: 80%;
-    margin: 20px auto 0 auto;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.send-cr-button {
-    padding: 10px 20px;
-    background-color: #b9d8ee;
-    color: #18244c;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.send-cr-button:hover {
-    background-color: #18244c;
-    color: white;
-    font-weight: bold;
-}
-
 .highlight {
     background-color: yellow;
     font-weight: bold;
@@ -556,10 +532,16 @@ select.form-control {
     width: 100%;
 }
 
-.btn-right {
+.button-group {
+    display: flex;
+    flex-direction: column; 
+}
+
+.button-group .btn-right {
+    margin-top: 10px;
     padding: 1px 7px;
-    font-size: 13px; 
-    margin-left: 5px;
+    font-size: 13px;
+    margin-bottom: 20px;
 }
 
 .action-button-wrapper {
@@ -573,9 +555,40 @@ select.form-control {
     color: white;
     border-radius: 4px;
     cursor: pointer;
+    width: 180px;
+}
+
+.action-button:hover {
+    background-color: #0056b3;
 }
 
 .action-button:disabled {
     background-color: #cccccc;
     cursor: not-allowed;
+}
+
+.duplicated-field {
+    margin-top: 10px;
+}
+
+
+.onenote-button-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.onenote-button-wrapper button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin:0;
+}
+
+.onenote-button-wrapper button:hover {
+    background-color: #0056b3;
 }
